# evals

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/evals/: constants.py  eval_results_analyzer.py  eval_runner.py  simpleqa_runner.py  utils.py
src/evals/configs/: datasets.py  samplers.py
src/evals/processing/: evaluate_answer.py  synthesize_answer.py  synthesizer_utils.py
src/evals/samplers/applied_samplers/: exa_sampler.py  google_sampler.py  parallel_sampler.py  perplexity_sampler.py  serp_api_google_sampler.py  tavily_sampler.py  you_livecrawl_sampler.py  you_sampler.py  you_search_sampler.py
src/evals/samplers/base_samplers/: base_api_sampler.py  base_sampler.py  base_sdk_sampler.py
src/simpleqa/: constants.py  simpleqa_runner.py
src/simpleqa/processing/: evaluate_answer.py  synthesize_answer.py
src/simpleqa/sampler/: base_sampler.py  exa_sampler.py  serp_api_google_sampler.py  tavily_sampler.py  you_sampler.py
tests/: test_simpleqa.py
